# desafio-hotmart

./: .gitignore  Dockerfile  README.md  main.py  params.yaml  pyproject.toml
data/output/: transcription_texto.txt  transcription_with_timestamps.json  translation_text.txt  translation_with_timestamps.json
desafio_hotmart/: speech_to_text.py  text_to_speech.py  translate.py  video_manipulation.py
doc/: desafio-hotmart.drawio
notebooks/: 00_sandbox.ipynb  01_translate.ipynb  02_tts.ipynb
